# paccreator

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  tests.yml
src/: main.py
src/examples/: pac_unittests.yaml  unittests.pac  unittests.yaml
src/paccreator/: __init__.py  helpers.py  paccreator.py  paccreatorconfig.py
src/pypacer/: __init__.py  helpers.py  helpers_test.py  output.pac  pypacer.py  pypacer_test.py  pypacerconfig.py  pypacerconfig_test.py  template.js  template.js.jinja
src/tests/: helpers_test.py  paccreator_test.py  paccreatorconfig_test.py  pypacer_test.py  pypacerconfig_test.py
