[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pypacer"
version = "0.1"
dynamic = ["dependencies"]
authors = [
    { name = "Heiko Schmidt", email = "73h@gmx.net" },
]
maintainers = [
    { name = "Heiko Schmidt", email = "73h@gmx.net" },
]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["proxy-auto-config", "pac", "wpad", "proxy", "findproxyforurl"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "watching-testrunner",
    "pytest",
    "pytest-cov",
    "PyPAC"
]

[tool.setuptools.packages.find]
where = ["src"]
#include = ["*.jinja"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"
