[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "paccreator"
version = "0.2.0"
dynamic = ["dependencies"]
authors = [
    { name = "Heiko Schmidt", email = "73h@gmx.net" },
]
maintainers = [
    { name = "Heiko Schmidt", email = "73h@gmx.net" },
]
description = "This package makes it possible to create simple proxy auto-config (PAC) files declaratively."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["proxy auto-config", "auto-config", "pac", "wpad", "proxy", "findproxyforurl"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/73h/paccreator"

[project.optional-dependencies]
test = [
    "watching-testrunner",
    "pytest",
    "pytest-cov",
    "PyPAC"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.jinja"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"
